# regshape

./: CODEOWNERS  CONTRIBUTING.md  MAINTAINERS  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-or-issue.yaml  config.yaml  doc-bug-or-issue.yaml  feature-request.yaml  question.yaml
.github/scripts/: bump_formula.py
.github/skills/: regshape-dev.skill
.github/skills/regshape-dev/: SKILL.md
.github/workflows/: publish.yml
docs/: index.md
docs/guides/: create-oci-layout.md  docker-desktop-integration.md  homebrew-install.md
specs/: README.md  architecture.md  telemetry-enhancements.md
specs/cli/: auth.md  blob.md  catalog.md  formatting.md  layout-push.md  layout.md  manifest.md  ping.md  referrer.md  tag.md
specs/docker/: docker-desktop-integration.md
specs/layout/: oci-layout-create.md
specs/models/: blob.md  catalog.md  error.md  manifest.md  referrer.md  tags.md
specs/operations/: blobs.md  catalog.md  manifests.md  referrers.md  tags.md
src/regshape/cli/: __init__.py  auth.py  blob.py  catalog.py  docker.py  formatting.py  layout.py  main.py  manifest.py  ping.py  referrer.py  tag.py
src/regshape/libs/: __init__.py  constants.py  errors.py  refs.py
src/regshape/tests/: __init__.py  test_auth.py  test_auth_cli.py  test_blob_cli.py  test_blob_model.py  test_blob_operations.py  test_catalog_cli.py  test_catalog_model.py  test_catalog_operations.py  test_client_middleware_integration.py  test_debug_calls_enhanced.py  test_docker_cli.py  test_docker_operations.py  test_error_model.py  test_formatting.py  test_layout_cli.py  test_layout_operations.py  test_layout_push.py  test_manifest_cli.py  (+19 more)
src/regtool/: __init__.py  auth.py  cli.py  constants.py  errors.py
(+55 files in other folders)
