[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regshape"
version = "0.1.0"
description = "CLI tool and Python library for manipulating artifacts in OCI registries"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Toddy Mladenov" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/toddysm/regshape"
Repository = "https://github.com/toddysm/regshape"
"Bug Tracker" = "https://github.com/toddysm/regshape/issues"

[project.scripts]
regshape = "regshape.cli.main:regshape"

[tool.setuptools.packages.find]
where = ["src"]
